--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "araport-geneslider",
   "private": true,
   "dependencies": {
-    "GeneSlider_Bower_Package": "https://github.com/asherpasha/GeneSlider_Bower_Package.git",
+    "GeneSlider_Bower_Package": "https://github.com/asherpasha/GeneSlider_Bower_Package.git#v0.1.1",
     "processing": "~1.4.13"
   }
 }
