--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "araport-geneslider",
   "private": true,
   "dependencies": {
-    "GeneSlider_Bower_Package": "https://github.com/asherpasha/GeneSlider_Bower_Package.git#v0.1.11",
-    "processing": "~1.4.13",
+	"GeneSlider_Bower_Package": "https://github.com/asherpasha/GeneSlider_Bower_Package.git#v0.1.12",
+    "processing": "1.4.1",
     "jquery-ui": "~1.11.4"
   }
 }
